--- a/ExampleApp/src/main/res/layout/activity_main.xml
+++ b/ExampleApp/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,26 +14,22 @@
 
     <at.grabner.circleprogress.CircleProgressView
         android:id="@+id/circleView"
-        android:layout_width="277dp"
-        android:layout_height="277dp"
-        CircleProgressView:cpv_autoTextSize="true"
-        CircleProgressView:cpv_barColor="@color/primary"
-        CircleProgressView:cpv_barWidth="35dp"
-        CircleProgressView:cpv_innerContourSize="0dp"
-        CircleProgressView:cpv_maxValue="100"
-        CircleProgressView:cpv_outerContourSize="0dp"
-        CircleProgressView:cpv_rimColor="@color/primary_light"
-        CircleProgressView:cpv_rimWidth="35dp"
-        CircleProgressView:cpv_seekMode="true"
-        CircleProgressView:cpv_showUnit="true"
-        CircleProgressView:cpv_spinColor="@color/primary"
-        CircleProgressView:cpv_textColor="@color/primary_dark"
-        CircleProgressView:cpv_textScale="1"
-        CircleProgressView:cpv_unit="%"
-        CircleProgressView:cpv_unitColor="@color/primary_light"
-        CircleProgressView:cpv_unitPosition="right_top"
-        CircleProgressView:cpv_unitScale="1"
-        CircleProgressView:cpv_value="10" />
+        android:layout_width="162dp"
+        android:layout_height="162dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
+        app:cpv_barWidth="35dp"
+        app:cpv_innerContourSize="0dp"
+        app:cpv_maxValue="100"
+        app:cpv_outerContourSize="0dp"
+        app:cpv_barColor="#73fcd6"
+        app:cpv_barColor1="#b3fb74"
+        app:cpv_rimWidth="35dp"
+        app:cpv_seekMode="false"
+        app:cpv_text_enabled="false"
+        app:cpv_rimColor="#E2E2E2"
+        />
 
 
     <ScrollView
